Working on SDKs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(RGBonREST)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(RGBonREST main.cpp)
+add_executable(RGBonREST main.cpp RGBonREST/APIServer/ServerUtils/SDKEngine/SDKWrapper/CorsairSDK/CorsairSDK.cpp RGBonREST/APIServer/ServerUtils/SDKEngine/SDKWrapper/CorsairSDK/CorsairSDK.h)
