Working on REST server

--- a/RGBonREST/CMakeLists.txt
+++ b/RGBonREST/CMakeLists.txt
@@ -9,6 +9,6 @@ FetchContent_MakeAvailable(json)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(RGBonREST main.cpp ./APIServer/RESTServer/Logger/AbstractLogger.h ./APIServer/Utils/ConfigReader.cpp ./APIServer/Utils/ConfigReader.h ./APIServer/Utils/ConfigValues.h)
+add_executable(RGBonREST main.cpp ./APIServer/RESTServer/Logger/AbstractLogger.h ./APIServer/Utils/ConfigReader.cpp ./APIServer/Utils/ConfigReader.h ./APIServer/Utils/ConfigValues.h ./APIServer/RESTServer/RESTServer.cpp ./APIServer/RESTServer/RESTServer.h ./APIServer/Utils/Misc.cpp ./APIServer/Utils/Misc.h ./APIServer/RESTServer/RequestHandler.cpp ./APIServer/RESTServer/RequestHandler.h)
 
 target_link_libraries(RGBonREST cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal cpprestsdk::cpprestsdk_brotli_internal nlohmann_json::nlohmann_json)
