Edit Cmake and logger
- chore: Made sqlite3.h and sqlite3.c be included by cmake.
- chore: Remove sqlite3.c, sqlite3.h
- refactor: Change Sqlite3Logger::log log with local time for DATETIME.

--- a/RGBonREST/CMakeLists.txt
+++ b/RGBonREST/CMakeLists.txt
@@ -3,19 +3,21 @@ project(RGBonREST)
 include(FetchContent)
 
 find_package(cpprestsdk CONFIG REQUIRED)
+find_package(unofficial-sqlite3 CONFIG REQUIRED)
 
 FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.10.5/json.tar.xz)
 FetchContent_MakeAvailable(json)
 
 set(CMAKE_CXX_STANDARD 14)
+message(STATUS "foo include dir: ${SQLite3_FOUND}")
 
 add_executable(RGBonREST main.cpp ./APIServer/RESTServer/Logger/AbstractLogger.h ./APIServer/Utils/ConfigReader.cpp
         ./APIServer/Utils/ConfigReader.h ./APIServer/Utils/ConfigValues.h ./APIServer/RESTServer/RESTServer.cpp
         ./APIServer/RESTServer/RESTServer.h ./APIServer/Utils/Misc.cpp ./APIServer/Utils/Misc.h
         ./APIServer/RESTServer/RequestHandler.cpp ./APIServer/RESTServer/RequestHandler.h
         ./APIServer/Utils/Defines.h ./APIServer/RESTServer/Logger/Sqlite3Logger.cpp
-        ./APIServer/RESTServer/Logger/Sqlite3Logger.h ./APIServer/RESTServer/Logger/Library/sqlite3.c
-        ./APIServer/RESTServer/Logger/Library/sqlite3.h)
+        ./APIServer/RESTServer/Logger/Sqlite3Logger.h)
+
 
 target_link_libraries(RGBonREST cpprestsdk::cpprest cpprestsdk::cpprestsdk_zlib_internal
-        cpprestsdk::cpprestsdk_brotli_internal nlohmann_json::nlohmann_json)
+        cpprestsdk::cpprestsdk_brotli_internal nlohmann_json::nlohmann_json unofficial::sqlite3::sqlite3)
